[Bug 409962] Cannot view attached mail with Content-type "Message/Rfc822" correctly. Make mime types lower case internally. r+sr=bienvenu